[gd_scene load_steps=78 format=2]

[ext_resource path="res://src/Actors/Players/Player.gd" type="Script" id=1]
[ext_resource path="res://src/Actors/Players/Player/States/OnGround/PlayerStateDamaged.gd" type="Script" id=2]
[ext_resource path="res://src/Actors/Players/Player/player-idle.png" type="Texture" id=3]
[ext_resource path="res://src/Actors/Players/Player/player-walking.png" type="Texture" id=4]
[ext_resource path="res://src/Actors/Players/Player/player-attacking-01.png" type="Texture" id=5]
[ext_resource path="res://src/Actors/Players/Player/PlayerStateMachine.gd" type="Script" id=6]
[ext_resource path="res://src/Actors/Players/Player/States/OnGround/PlayerStateIdle.gd" type="Script" id=7]
[ext_resource path="res://src/Actors/Players/Player/States/OnGround/PlayerStateMove.gd" type="Script" id=8]
[ext_resource path="res://src/Actors/Players/stateDisplay.gd" type="Script" id=9]
[ext_resource path="res://src/Actors/Players/Player/States/Attacks/PlayerStateAttack01.gd" type="Script" id=10]
[ext_resource path="res://src/Actors/Players/Player/player-damaged.png" type="Texture" id=11]
[ext_resource path="res://src/Actors/Players/Player/States/Attacks/PlayerStateAttack02.gd" type="Script" id=12]
[ext_resource path="res://src/Actors/Players/Player/player-attacking-02.png" type="Texture" id=13]
[ext_resource path="res://src/Actors/Players/Player/player-attacking-03.png" type="Texture" id=14]
[ext_resource path="res://src/Actors/Players/Player/States/Attacks/PlayerStateAttack03.gd" type="Script" id=15]
[ext_resource path="res://src/Actors/Players/Player/States/Attacks/PlayerStateAttack04.gd" type="Script" id=16]
[ext_resource path="res://src/Actors/Players/Player/player-attacking-04.png" type="Texture" id=17]
[ext_resource path="res://src/Actors/Players/Player/player-attacking-mana-01.png" type="Texture" id=18]
[ext_resource path="res://src/Actors/Players/Player/mana-particule.png" type="Texture" id=19]
[ext_resource path="res://src/Actors/Players/Player/States/Attacks/PlayerStateAttackMana01.gd" type="Script" id=20]
[ext_resource path="res://src/Actors/Players/Player/ManaAttack/ManaFall.tscn" type="PackedScene" id=21]
[ext_resource path="res://src/Actors/Players/Player/player-get-lifeBottle.png" type="Texture" id=22]
[ext_resource path="res://src/Actors/Players/Player/States/OnGround/GetLifeBottle.gd" type="Script" id=23]
[ext_resource path="res://src/Actors/Players/Player/player-gameover.png" type="Texture" id=24]
[ext_resource path="res://src/Actors/Players/Player/States/OnGround/Gameover.gd" type="Script" id=25]

[sub_resource type="Animation" id=46]
resource_name = "attacking_01_right"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attacking01" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=51]
resource_name = "attacking_02_right"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attacking02" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=55]
resource_name = "attacking_03_right"
length = 0.35
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attacking03" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=59]
resource_name = "attacking_04_right"
length = 0.35
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attacking04" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=75]
resource_name = "attacking_mana_01_right"
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attacking_mana01" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ManaAttackParticules:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ManaAttackParticules:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "mana_attack_start"
} ]
}

[sub_resource type="Animation" id=47]
resource_name = "damaged"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "damaged_right" ]
}

[sub_resource type="Animation" id=91]
resource_name = "gameover"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "gameover" ]
}

[sub_resource type="Animation" id=79]
resource_name = "get_life_bottle"
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 3, 4, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "getLifeBootle" ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "blink_green"
}, {
"args": [  ],
"method": "emit_player_tookadvantage_of_lifebottle"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}

[sub_resource type="Animation" id=19]
resource_name = "walking_right"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk_right" ]
}

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 13 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 13 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 13 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 14 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 14 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 14 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 17 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 17 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 17 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 18 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 18 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 11 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 24 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 24 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 24 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 24 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 24 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 24 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 22 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 22 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 22 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 22 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 22 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ) ],
"loop": true,
"name": "attacking01",
"speed": 5.0
}, {
"frames": [ SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ) ],
"loop": true,
"name": "attacking02",
"speed": 5.0
}, {
"frames": [ SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ) ],
"loop": true,
"name": "attacking03",
"speed": 5.0
}, {
"frames": [ SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ) ],
"loop": true,
"name": "attacking04",
"speed": 5.0
}, {
"frames": [ SubResource( 76 ), SubResource( 77 ), SubResource( 78 ) ],
"loop": true,
"name": "attacking_mana01",
"speed": 5.0
}, {
"frames": [ SubResource( 48 ), SubResource( 49 ), SubResource( 50 ) ],
"loop": true,
"name": "damaged_right",
"speed": 5.0
}, {
"frames": [ SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ) ],
"loop": true,
"name": "gameover",
"speed": 5.0
}, {
"frames": [ SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ) ],
"loop": true,
"name": "getLifeBootle",
"speed": 5.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "walk_right",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=40]
extents = Vector2( 4, 5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 5.25 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ -8.0 ]
}

[node name="BodyPivot" type="Position2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="BodyPivot"]
root_node = NodePath("../..")
anims/attacking_01_right = SubResource( 46 )
anims/attacking_02_right = SubResource( 51 )
anims/attacking_03_right = SubResource( 55 )
anims/attacking_04_right = SubResource( 59 )
anims/attacking_mana_01_right = SubResource( 75 )
anims/damaged = SubResource( 47 )
anims/gameover = SubResource( 91 )
anims/get_life_bottle = SubResource( 79 )
anims/idle = SubResource( 2 )
anims/walking_right = SubResource( 19 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="BodyPivot"]
position = Vector2( -1, -32 )
frames = SubResource( 10 )
animation = "gameover"
frame = 5

[node name="HitBox" type="Area2D" parent="BodyPivot"]
position = Vector2( 0, -12 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyPivot/HitBox"]
position = Vector2( 15, -1 )
shape = SubResource( 40 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -5.75 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
current = true
smoothing_enabled = true
smoothing_speed = 2.0
drag_margin_left = 0.5
drag_margin_right = 0.5

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 6 )
START_STATE = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Attack01" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="Attack02" type="Node" parent="StateMachine"]
script = ExtResource( 12 )

[node name="Attack03" type="Node" parent="StateMachine"]
script = ExtResource( 15 )

[node name="Attack04" type="Node" parent="StateMachine"]
script = ExtResource( 16 )

[node name="Damaged" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="AttackMana01" type="Node" parent="StateMachine"]
script = ExtResource( 20 )

[node name="GetLifeBottle" type="Node" parent="StateMachine"]
script = ExtResource( 23 )

[node name="Gameover" type="Node" parent="StateMachine"]
script = ExtResource( 25 )

[node name="stateDisplay" type="Label" parent="."]
margin_left = -20.0
margin_top = -48.0
margin_right = 20.0
margin_bottom = -34.0
text = "dddaa"
script = ExtResource( 9 )

[node name="ManaAttackParticules" type="CPUParticles2D" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
position = Vector2( 2.98023e-08, -32 )
rotation = -3.14159
emitting = false
amount = 50
lifetime = 1.8
preprocess = 1.0
randomness = 0.24
texture = ExtResource( 19 )
spread = 15.0
gravity = Vector2( 0, 100 )
scale_amount = 0.8
scale_amount_random = 0.47
anim_speed = 28.34
anim_speed_random = 0.45
anim_offset = 0.11

[node name="ManaFalling" type="Node2D" parent="."]
visible = false

[node name="ManaFall" parent="ManaFalling" instance=ExtResource( 21 )]
position = Vector2( -94, -95 )

[node name="ManaFall2" parent="ManaFalling" instance=ExtResource( 21 )]
position = Vector2( -65, -71 )

[node name="ManaFall3" parent="ManaFalling" instance=ExtResource( 21 )]
position = Vector2( -25, -60 )

[node name="ManaFall4" parent="ManaFalling" instance=ExtResource( 21 )]
position = Vector2( 25, -61 )

[node name="ManaFall5" parent="ManaFalling" instance=ExtResource( 21 )]
position = Vector2( 69, -74 )

[node name="ManaFall6" parent="ManaFalling" instance=ExtResource( 21 )]
position = Vector2( 108, -96 )

[node name="ManaFall7" parent="ManaFalling" instance=ExtResource( 21 )]
position = Vector2( -54, -108 )

[node name="ManaFall8" parent="ManaFalling" instance=ExtResource( 21 )]
position = Vector2( -15, -108 )

[node name="ManaFall9" parent="ManaFalling" instance=ExtResource( 21 )]
position = Vector2( 42, -107 )

[node name="ManaFall10" parent="ManaFalling" instance=ExtResource( 21 )]
position = Vector2( 83, -108 )

[connection signal="animation_finished" from="BodyPivot/AnimationPlayer" to="StateMachine" method="_on_animation_finished"]
[connection signal="body_entered" from="BodyPivot/HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="state_changed" from="StateMachine" to="." method="_on_StateMachine_state_changed"]
[connection signal="state_changed" from="StateMachine" to="stateDisplay" method="_on_StateMachine_state_changed"]
[connection signal="fall_ended" from="ManaFalling/ManaFall10" to="." method="_on_ManaFall_fall_ended"]
